--- a/climate.html
+++ b/climate.html
@@ -44,8 +44,9 @@ Dragon Blood trees are extremely rare and only live in one place. They are amazi
 </div>
 
 
-
 <h1 style="text-align: center;">These trees are extremely interesting and cool, and I recommend you to go and do more research on your own! </h1>
+
+<link href="../css/style.css" rel="stylesheet" type="text/css" />
 
 </body>
 </html>
