Fixed the style.css

--- a/climate.html
+++ b/climate.html
@@ -46,7 +46,7 @@ Dragon Blood trees are extremely rare and only live in one place. They are amazi
 
 <h1 style="text-align: center;">These trees are extremely interesting and cool, and I recommend you to go and do more research on your own! </h1>
 
-<link href="../css/style.css" rel="stylesheet" type="text/css" />
+<link href="./css/style.css" rel="stylesheet" type="text/css" />
 
 </body>
 </html>
